CREATE TYPE "account_status" AS ENUM (
  'active',
  'cooldown',
  'disabled',
  'banned',
  'error'
);

CREATE TYPE "task_status" AS ENUM (
  'queued',
  'scheduled',
  'in_progress',
  'retry',
  'done',
  'failed',
  'cancelled',
  'stuck'
);

CREATE TYPE "attempt_status" AS ENUM (
  'running',
  'success',
  'error',
  'timeout'
);

CREATE TYPE "task_op_account_role" AS ENUM (
  'primary',
  'source',
  'target'
);

CREATE TABLE "resource_op_types" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "code" text UNIQUE NOT NULL,
  "name" text,
  "rph_limit" integer NOT NULL,
  "reserve_percent" numeric NOT NULL DEFAULT 10,
  "is_enabled" boolean NOT NULL DEFAULT true,
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "updated_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "accounts" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "telegram_account_id" text,
  "session_name" text UNIQUE NOT NULL,
  "status" account_status NOT NULL DEFAULT 'active',
  "is_enabled" boolean NOT NULL DEFAULT true,
  "cooldown_until" timestamptz,
  "current_task_id" bigint,
  "last_used_at" timestamptz,
  "last_error" text,
  "last_error_at" timestamptz,
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "updated_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "task_types" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "code" text UNIQUE NOT NULL,
  "name" text NOT NULL,
  "description" text,
  "is_enabled" boolean NOT NULL DEFAULT false,
  "default_priority" integer NOT NULL,
  "min_available_resource_percent" integer NOT NULL,
  "requires_specific_account" boolean NOT NULL DEFAULT false,
  "uses_two_accounts" boolean NOT NULL DEFAULT false,
  "max_attempts" integer NOT NULL DEFAULT 5,
  "retry_delay_seconds" integer NOT NULL DEFAULT 10,
  "retry_backoff_multiplier" numeric NOT NULL DEFAULT 2,
  "max_retry_delay_seconds" integer NOT NULL DEFAULT 1800,
  "target_queue_size" integer,
  "max_postpone_count" integer NOT NULL DEFAULT 100,
  "task_timeout_seconds" integer NOT NULL DEFAULT 300,
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "updated_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "task_type_ops" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "task_type_id" integer NOT NULL,
  "op_type_id" integer NOT NULL,
  "units_per_execution" integer NOT NULL DEFAULT 1,
  "account_role" task_op_account_role NOT NULL DEFAULT 'primary'
);

-- platforms: справочник из Lidogen_main_DB.sql (FK source_channels.platform_id).
-- IF NOT EXISTS — накат очереди поверх существующей main DB без дублирования таблицы.
CREATE TABLE IF NOT EXISTS "platforms" (
  "id" bigint GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
  "code" varchar NOT NULL,
  "name" varchar NOT NULL,
  "description" text,
  "website_url" varchar,
  "icon_url" varchar,
  "is_active" boolean NOT NULL DEFAULT true,
  "is_in_testing" boolean NOT NULL DEFAULT false,
  "can_be_source" boolean NOT NULL DEFAULT true,
  "can_be_delivery" boolean NOT NULL DEFAULT true,
  "can_be_feedback_source" boolean NOT NULL DEFAULT true,
  "metadata" jsonb,
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "updated_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE UNIQUE INDEX IF NOT EXISTS "uq_platforms_code_ci"
  ON "platforms" (lower("code"));

-- source_channels: Lidogen_main_DB + поля балансировщика (ТЗ §5.1, A8).
-- Идентичность канала: (platform_id, external_channel_id). channel_ref — в payload задачи / external_url.
-- При интеграции с существующей main DB использовать ALTER ADD COLUMN вместо CREATE.
CREATE TABLE "source_channels" (
  "id" bigint GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
  "platform_id" bigint NOT NULL,
  "external_channel_id" varchar NOT NULL,
  "name" varchar,
  "description" text,
  "external_url" varchar,
  "image_url" varchar,
  "metadata" jsonb,
  "linked_projects_count" integer NOT NULL DEFAULT 0,
  "is_active" boolean NOT NULL DEFAULT true,
  "assigned_account_id" bigint,
  "extra_data_collected" boolean NOT NULL DEFAULT false,
  "last_updated_at" timestamptz,
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "updated_at" timestamptz NOT NULL DEFAULT (now()),
  CONSTRAINT "chk_source_channels_linked_projects_count" CHECK ("linked_projects_count" >= 0),
  CONSTRAINT "uq_source_channels_platform_external" UNIQUE ("platform_id", "external_channel_id")
);

CREATE TABLE "task_queue" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "task_type_id" integer NOT NULL,
  "task_type_code" text NOT NULL,
  "status" task_status NOT NULL DEFAULT 'queued',
  "priority" integer NOT NULL,
  "channel_id" bigint,
  "account_id" bigint,
  "source_account_id" bigint,
  "target_account_id" bigint,
  "payload" jsonb NOT NULL DEFAULT '{}',
  "dedup_key" text,
  "run_after" timestamptz NOT NULL DEFAULT (now()),
  "locked_by" text,
  "locked_at" timestamptz,
  "locked_until" timestamptz,
  "attempt_count" integer NOT NULL DEFAULT 0,
  "postpone_count" integer NOT NULL DEFAULT 0,
  "max_attempts" integer NOT NULL,
  "last_error" text,
  "last_error_at" timestamptz,
  "started_at" timestamptz,
  "finished_at" timestamptz,
  "created_by" text,
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "updated_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "task_attempts" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "task_id" bigint NOT NULL,
  "task_type_id" integer NOT NULL,
  "account_id" bigint NOT NULL,
  "source_account_id" bigint,
  "target_account_id" bigint,
  "attempt_number" integer NOT NULL,
  "status" attempt_status NOT NULL,
  "error_code" text,
  "error_message" text,
  "started_at" timestamptz NOT NULL,
  "finished_at" timestamptz,
  "created_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "account_resource_usage" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "account_id" bigint NOT NULL,
  "op_type_id" integer NOT NULL,
  "task_id" bigint NOT NULL,
  "task_attempt_id" bigint,
  "task_type_id" integer NOT NULL,
  "units" integer NOT NULL DEFAULT 1,
  "created_at" timestamptz NOT NULL DEFAULT (now())
);

ALTER TABLE "task_type_ops" ADD FOREIGN KEY ("op_type_id") REFERENCES "resource_op_types" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "task_type_ops" ADD FOREIGN KEY ("task_type_id") REFERENCES "task_types" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "task_queue" ADD FOREIGN KEY ("task_type_id") REFERENCES "task_types" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "task_queue" ADD FOREIGN KEY ("account_id") REFERENCES "accounts" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "task_queue" ADD FOREIGN KEY ("source_account_id") REFERENCES "accounts" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "task_queue" ADD FOREIGN KEY ("target_account_id") REFERENCES "accounts" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "task_queue" ADD FOREIGN KEY ("channel_id") REFERENCES "source_channels" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "source_channels" ADD FOREIGN KEY ("platform_id") REFERENCES "platforms" ("id") ON DELETE RESTRICT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "source_channels" ADD FOREIGN KEY ("assigned_account_id") REFERENCES "accounts" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "task_attempts" ADD FOREIGN KEY ("task_id") REFERENCES "task_queue" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "task_attempts" ADD FOREIGN KEY ("task_type_id") REFERENCES "task_types" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "task_attempts" ADD FOREIGN KEY ("account_id") REFERENCES "accounts" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "task_attempts" ADD FOREIGN KEY ("source_account_id") REFERENCES "accounts" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "task_attempts" ADD FOREIGN KEY ("target_account_id") REFERENCES "accounts" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "account_resource_usage" ADD FOREIGN KEY ("account_id") REFERENCES "accounts" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "account_resource_usage" ADD FOREIGN KEY ("op_type_id") REFERENCES "resource_op_types" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "account_resource_usage" ADD FOREIGN KEY ("task_id") REFERENCES "task_queue" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "account_resource_usage" ADD FOREIGN KEY ("task_attempt_id") REFERENCES "task_attempts" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "account_resource_usage" ADD FOREIGN KEY ("task_type_id") REFERENCES "task_types" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "accounts" ADD FOREIGN KEY ("current_task_id") REFERENCES "task_queue" ("id") DEFERRABLE INITIALLY IMMEDIATE;

-- =============================================================================
-- Индексы и ограничения (ТЗ §9, §12, §15, §26; план A5, A6, A7, G1, G2, F1–F5)
-- =============================================================================

-- --- task_queue: диспетчер (claim_next, §15.2 — priority DESC, created_at ASC) ---
CREATE INDEX "idx_task_queue_dispatch"
  ON "task_queue" ("status", "run_after", "priority" DESC, "created_at" ASC);

CREATE INDEX "idx_task_queue_claim_ready"
  ON "task_queue" ("run_after", "priority" DESC, "created_at" ASC)
  WHERE "status" IN ('queued', 'scheduled', 'retry');

-- --- task_queue: dedup активных задач (ТЗ §12) ---
CREATE UNIQUE INDEX "idx_task_queue_dedup_active"
  ON "task_queue" ("dedup_key")
  WHERE "dedup_key" IS NOT NULL
    AND "status" IN ('queued', 'scheduled', 'retry', 'in_progress');

-- --- task_queue: target_queue_size продюсеров (§8.3), метрики G1 ---
CREATE INDEX "idx_task_queue_active_by_type"
  ON "task_queue" ("task_type_id", "status")
  WHERE "status" IN ('queued', 'scheduled', 'retry', 'in_progress');

CREATE INDEX "idx_task_queue_queued_age"
  ON "task_queue" ("created_at" ASC)
  WHERE "status" = 'queued';

CREATE INDEX "idx_task_queue_status_created"
  ON "task_queue" ("status", "created_at");

-- --- task_queue: watchdog in_progress (C6, §13.4, §26.2 stuck_tasks_count) ---
CREATE INDEX "idx_task_queue_in_progress_started"
  ON "task_queue" ("started_at")
  WHERE "status" = 'in_progress';

CREATE INDEX "idx_task_queue_stuck"
  ON "task_queue" ("status", "started_at")
  WHERE "status" IN ('in_progress', 'stuck');

-- --- task_queue: мониторинг postpone, done, retry (G1, G4, §26.2) ---
CREATE INDEX "idx_task_queue_high_postpone"
  ON "task_queue" ("postpone_count" DESC)
  WHERE "status" IN ('scheduled', 'retry')
    AND "postpone_count" > 0;

CREATE INDEX "idx_task_queue_done_finished"
  ON "task_queue" ("finished_at" DESC)
  WHERE "status" = 'done';

CREATE INDEX "idx_task_queue_retry_run_after"
  ON "task_queue" ("run_after")
  WHERE "status" = 'retry';

-- --- task_queue: задачи с привязкой к каналу/аккаунту (§5.1, B6, F1 dedup-check) ---
CREATE INDEX "idx_task_queue_channel_active"
  ON "task_queue" ("channel_id")
  WHERE "channel_id" IS NOT NULL
    AND "status" IN ('queued', 'scheduled', 'retry', 'in_progress');

CREATE INDEX "idx_task_queue_account_active"
  ON "task_queue" ("account_id", "status")
  WHERE "account_id" IS NOT NULL
    AND "status" IN ('queued', 'scheduled', 'retry', 'in_progress');

-- --- accounts: pick/reserve (B6, §16), мониторинг cooldown (G2, §26.3) ---
CREATE INDEX "idx_accounts_pick_available"
  ON "accounts" ("cooldown_until", "last_used_at")
  WHERE "status" = 'active'
    AND "is_enabled" = true
    AND "current_task_id" IS NULL;

CREATE INDEX "idx_accounts_status_cooldown"
  ON "accounts" ("status", "cooldown_until")
  WHERE "status" IN ('active', 'cooldown');

-- --- source_channels: main DB + балансировщик (§5.1, F2/F4/F5, §22–§24) ---
CREATE INDEX "idx_source_channels_platform_id"
  ON "source_channels" ("platform_id");

CREATE INDEX "idx_source_channels_linked_projects_count"
  ON "source_channels" ("linked_projects_count");

CREATE INDEX "idx_source_channels_assigned_account"
  ON "source_channels" ("assigned_account_id")
  WHERE "assigned_account_id" IS NOT NULL;

CREATE INDEX "idx_source_channels_collect_pending"
  ON "source_channels" ("assigned_account_id", "created_at")
  WHERE "assigned_account_id" IS NOT NULL
    AND "extra_data_collected" = false;

CREATE INDEX "idx_source_channels_stale_update"
  ON "source_channels" ("last_updated_at" ASC NULLS FIRST)
  WHERE "assigned_account_id" IS NOT NULL;

-- --- task_type_ops: уникальность связей per-op (§0.5, A3) ---
CREATE UNIQUE INDEX "idx_task_type_ops_unique"
  ON "task_type_ops" ("task_type_id", "op_type_id", "account_role");

-- --- account_resource_usage: расход за час (A6, B8, §7, §26.3 per-op) ---
CREATE INDEX "idx_account_resource_usage_account_hour"
  ON "account_resource_usage" ("account_id", "created_at" DESC);

CREATE INDEX "idx_account_resource_usage_account_op_hour"
  ON "account_resource_usage" ("account_id", "op_type_id", "created_at" DESC);

CREATE INDEX "idx_account_resource_usage_task"
  ON "account_resource_usage" ("task_id");

CREATE INDEX "idx_account_resource_usage_attempt"
  ON "account_resource_usage" ("task_attempt_id")
  WHERE "task_attempt_id" IS NOT NULL;

-- --- task_attempts: история, мониторинг ошибок (A7, B9, G2, G4, §10, §26.3) ---
CREATE UNIQUE INDEX "idx_task_attempts_task_number"
  ON "task_attempts" ("task_id", "attempt_number");

CREATE INDEX "idx_task_attempts_account_errors"
  ON "task_attempts" ("account_id", "started_at" DESC)
  WHERE "status" IN ('error', 'timeout');

CREATE INDEX "idx_task_attempts_type_errors"
  ON "task_attempts" ("task_type_id", "started_at" DESC)
  WHERE "status" IN ('error', 'timeout');

-- =============================================================================
-- Триггеры updated_at (паритет с Lidogen_main_DB.update_updated_at)
-- =============================================================================
-- В main DB функция update_updated_at() уже существует — при интеграции
-- (см. docs(plan)/db-integration-plan.md) этот блок НЕ применять, использовать
-- существующую функцию и не дублировать триггеры на platforms/source_channels.

CREATE OR REPLACE FUNCTION "set_updated_at"()
  RETURNS trigger
  LANGUAGE plpgsql
AS $$
BEGIN
  NEW."updated_at" = now();
  RETURN NEW;
END;
$$;

CREATE TRIGGER "trg_resource_op_types_set_updated_at"
  BEFORE UPDATE ON "resource_op_types"
  FOR EACH ROW EXECUTE FUNCTION "set_updated_at"();

CREATE TRIGGER "trg_accounts_set_updated_at"
  BEFORE UPDATE ON "accounts"
  FOR EACH ROW EXECUTE FUNCTION "set_updated_at"();

CREATE TRIGGER "trg_task_types_set_updated_at"
  BEFORE UPDATE ON "task_types"
  FOR EACH ROW EXECUTE FUNCTION "set_updated_at"();

CREATE TRIGGER "trg_task_queue_set_updated_at"
  BEFORE UPDATE ON "task_queue"
  FOR EACH ROW EXECUTE FUNCTION "set_updated_at"();

CREATE TRIGGER "trg_source_channels_set_updated_at"
  BEFORE UPDATE ON "source_channels"
  FOR EACH ROW EXECUTE FUNCTION "set_updated_at"();

-- =============================================================================
-- Мониторинговые VIEW (ТЗ §26.2 очередь, §26.3 аккаунты; план G1, G2)
-- per-op (§0.5): ресурс считается по op_type, эффективный лимит — с учётом reserve_percent
-- =============================================================================

-- --- §26.2: распределение очереди по статусам (G1) ---
CREATE VIEW "v_queue_size_by_status" AS
SELECT "status", count(*) AS "tasks_count"
FROM "task_queue"
GROUP BY "status";

-- --- §26.2: активные задачи по типам (target_queue_size, §8.3) ---
CREATE VIEW "v_queue_size_by_type" AS
SELECT
  "task_type_code",
  "status",
  count(*) AS "tasks_count"
FROM "task_queue"
WHERE "status" IN ('queued', 'scheduled', 'retry', 'in_progress')
GROUP BY "task_type_code", "status";

-- --- §26.2: сводные метрики очереди одной строкой (G1, для GET /queue/metrics) ---
CREATE VIEW "v_queue_metrics" AS
SELECT
  count(*) FILTER (WHERE "status" IN ('queued', 'scheduled', 'retry', 'in_progress')) AS "queue_size_total",
  count(*) FILTER (WHERE "status" = 'queued')      AS "queued_count",
  count(*) FILTER (WHERE "status" = 'scheduled')   AS "scheduled_count",
  count(*) FILTER (WHERE "status" = 'in_progress') AS "in_progress_count",
  count(*) FILTER (WHERE "status" = 'retry')       AS "retry_tasks_count",
  count(*) FILTER (WHERE "status" = 'stuck')       AS "stuck_tasks_count",
  count(*) FILTER (WHERE "status" = 'failed')      AS "failed_tasks_count",
  count(*) FILTER (WHERE "status" IN ('scheduled', 'retry') AND "postpone_count" > 0) AS "postponed_tasks_count",
  count(*) FILTER (WHERE "status" = 'done' AND "finished_at" >= now() - interval '5 minutes') AS "done_tasks_last_5_min",
  COALESCE(
    EXTRACT(EPOCH FROM (now() - min("created_at") FILTER (WHERE "status" = 'queued')))::bigint,
    0
  ) AS "oldest_queued_task_age_seconds"
FROM "task_queue";

-- --- §26.2: задачи с частым откладыванием (G4 alert high postpone_count) ---
CREATE VIEW "v_high_postpone_tasks" AS
SELECT
  "id",
  "task_type_code",
  "status",
  "postpone_count",
  "last_error",
  "run_after",
  "created_at"
FROM "task_queue"
WHERE "status" IN ('scheduled', 'retry')
  AND "postpone_count" > 0
ORDER BY "postpone_count" DESC;

-- --- §26.3 per-op: расход и доступный ресурс по каждому op аккаунта ---
-- effective_rph = rph_limit * (1 - reserve_percent / 100)
CREATE VIEW "v_account_op_usage_last_hour" AS
SELECT
  "a"."id"                     AS "account_id",
  "a"."session_name",
  "a"."status"                 AS "account_status",
  "rot"."id"                   AS "op_type_id",
  "rot"."code"                 AS "op_code",
  "rot"."rph_limit",
  "rot"."reserve_percent",
  floor("rot"."rph_limit" * (1 - "rot"."reserve_percent" / 100.0))::int AS "effective_rph",
  COALESCE("u"."used_last_hour", 0) AS "used_last_hour",
  floor("rot"."rph_limit" * (1 - "rot"."reserve_percent" / 100.0))::int
    - COALESCE("u"."used_last_hour", 0) AS "available_resource",
  CASE
    WHEN floor("rot"."rph_limit" * (1 - "rot"."reserve_percent" / 100.0)) > 0
    THEN round(
      (floor("rot"."rph_limit" * (1 - "rot"."reserve_percent" / 100.0))
        - COALESCE("u"."used_last_hour", 0))::numeric
      / floor("rot"."rph_limit" * (1 - "rot"."reserve_percent" / 100.0)) * 100,
      2
    )
    ELSE 0
  END AS "available_resource_percent"
FROM "accounts" "a"
CROSS JOIN "resource_op_types" "rot"
LEFT JOIN (
  SELECT "account_id", "op_type_id", SUM("units") AS "used_last_hour"
  FROM "account_resource_usage"
  WHERE "created_at" >= now() - interval '1 hour'
  GROUP BY "account_id", "op_type_id"
) "u" ON "u"."account_id" = "a"."id" AND "u"."op_type_id" = "rot"."id"
WHERE "rot"."is_enabled" = true;

-- --- §26.3: сводка ресурса по аккаунту (худший op = решение C5/G7★) ---
CREATE VIEW "v_account_resource_summary" AS
SELECT
  "account_id",
  "session_name",
  "account_status",
  min("available_resource_percent")              AS "worst_available_percent",
  bool_or("available_resource" <= 0)             AS "any_op_exhausted",
  count(*) FILTER (WHERE "available_resource" <= 0) AS "exhausted_ops_count"
FROM "v_account_op_usage_last_hour"
GROUP BY "account_id", "session_name", "account_status";

-- --- §26.3: сводка по парку аккаунтов (active/cooldown/без ресурса) ---
CREATE VIEW "v_accounts_overview" AS
SELECT
  count(*) FILTER (WHERE "status" = 'active' AND "is_enabled" = true) AS "active_accounts_count",
  count(*) FILTER (WHERE "status" = 'cooldown')  AS "accounts_in_cooldown",
  count(*) FILTER (WHERE "status" = 'banned')    AS "banned_accounts_count",
  count(*) FILTER (WHERE "status" = 'disabled')  AS "disabled_accounts_count",
  count(*) FILTER (WHERE "status" = 'error')     AS "error_accounts_count",
  (
    SELECT count(*) FROM "v_account_resource_summary"
    WHERE "any_op_exhausted" = true
  ) AS "accounts_without_resource"
FROM "accounts";

-- --- §26.3 / §26.4: частота ошибок аккаунта за последний час (G4 alert) ---
CREATE VIEW "v_account_error_rate_last_hour" AS
SELECT
  "account_id",
  count(*)                                               AS "attempts_last_hour",
  count(*) FILTER (WHERE "status" IN ('error', 'timeout')) AS "errors_last_hour",
  CASE
    WHEN count(*) > 0
    THEN round(
      count(*) FILTER (WHERE "status" IN ('error', 'timeout'))::numeric / count(*) * 100,
      2
    )
    ELSE 0
  END AS "error_rate_percent"
FROM "task_attempts"
WHERE "started_at" >= now() - interval '1 hour'
GROUP BY "account_id";

-- --- §26.4: массовые ошибки по типу задачи за последний час (G4 alert) ---
CREATE VIEW "v_task_type_error_rate_last_hour" AS
SELECT
  "task_type_id",
  count(*)                                               AS "attempts_last_hour",
  count(*) FILTER (WHERE "status" IN ('error', 'timeout')) AS "errors_last_hour",
  CASE
    WHEN count(*) > 0
    THEN round(
      count(*) FILTER (WHERE "status" IN ('error', 'timeout'))::numeric / count(*) * 100,
      2
    )
    ELSE 0
  END AS "error_rate_percent"
FROM "task_attempts"
WHERE "started_at" >= now() - interval '1 hour'
GROUP BY "task_type_id";
